--- a/web_static/103-index.html
+++ b/web_static/103-index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="styles/common.css">
-  <link rel="stylesheet" href="styles/header.css">
-  <link rel="stylesheet" href="styles/footer.css">
-  <link rel="stylesheet" href="styles/filters.css">
-  <link rel="stylesheet" href="styles/places.css">
+  <link rel="stylesheet" href="styles/4-common.css"/>
+		<link rel="stylesheet" href="styles/3-header.css"/>
+		<link rel="stylesheet" href="styles/3-footer.css"/>
+		<link rel="stylesheet" href="styles/6-filters.css"/>
+		<link rel="stylesheet" href="styles/103-places.css"/>
   <link rel="icon" href="images/icon.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
